--- a/OrangeFun/Base.lproj/Main.storyboard
+++ b/OrangeFun/Base.lproj/Main.storyboard
@@ -275,7 +275,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NmT-pL-ZEQ">
-                                <rect key="frame" x="0.0" y="64" width="375" height="40"/>
+                                <rect key="frame" x="0.0" y="74" width="375" height="40"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UFA-eS-62U">
                                         <rect key="frame" x="0.0" y="39" width="375" height="1"/>
@@ -312,12 +312,12 @@
                                     <constraint firstItem="gQO-5z-oVo" firstAttribute="centerY" secondItem="NmT-pL-ZEQ" secondAttribute="centerY" id="rm9-TJ-8ki"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0Vr-nb-pP3">
-                                <rect key="frame" x="0.0" y="104" width="375" height="514"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0Vr-nb-pP3">
+                                <rect key="frame" x="0.0" y="114" width="375" height="504"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F2q-hs-Sg8">
-                                <rect key="frame" x="0.0" y="104" width="375" height="514"/>
+                                <rect key="frame" x="0.0" y="114" width="375" height="504"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nosearch" translatesAutoresizingMaskIntoConstraints="NO" id="9X3-Z9-hgK">
                                         <rect key="frame" x="131.5" y="50" width="112.5" height="112.5"/>
@@ -342,7 +342,7 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.95686274509803915" green="0.95686274509803915" blue="0.95686274509803915" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="dvJ-D9-Plf" firstAttribute="top" secondItem="F2q-hs-Sg8" secondAttribute="bottom" id="CkX-vg-vq9"/>
                             <constraint firstItem="dvJ-D9-Plf" firstAttribute="top" secondItem="0Vr-nb-pP3" secondAttribute="bottom" id="CpX-gz-iIq"/>
@@ -353,7 +353,7 @@
                             <constraint firstAttribute="trailing" secondItem="NmT-pL-ZEQ" secondAttribute="trailing" id="dmN-yH-lk8"/>
                             <constraint firstItem="0Vr-nb-pP3" firstAttribute="leading" secondItem="l9M-4F-194" secondAttribute="leading" id="eA8-Qn-dnl"/>
                             <constraint firstItem="0Vr-nb-pP3" firstAttribute="top" secondItem="NmT-pL-ZEQ" secondAttribute="bottom" id="jzH-o1-FlG"/>
-                            <constraint firstItem="NmT-pL-ZEQ" firstAttribute="top" secondItem="u7f-gf-jE9" secondAttribute="bottom" id="mQT-qH-nQF"/>
+                            <constraint firstItem="NmT-pL-ZEQ" firstAttribute="top" secondItem="u7f-gf-jE9" secondAttribute="bottom" constant="10" id="mQT-qH-nQF"/>
                             <constraint firstItem="F2q-hs-Sg8" firstAttribute="leading" secondItem="l9M-4F-194" secondAttribute="leading" id="uda-fY-Rcp"/>
                         </constraints>
                     </view>
@@ -453,18 +453,48 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xSo-po-Qw9">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nosearch" translatesAutoresizingMaskIntoConstraints="NO" id="nrd-oR-Vuq">
+                                        <rect key="frame" x="131.5" y="50" width="112.5" height="112.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="nrd-oR-Vuq" secondAttribute="height" multiplier="1:1" id="vIX-yD-DLQ"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="哎呀，没有相关的信息！" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Os-Sa-ddg">
+                                        <rect key="frame" x="110" y="182.5" width="154" height="20"/>
+                                        <fontDescription key="fontDescription" name="PingFangHK-Regular" family="PingFang HK" pointSize="14"/>
+                                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.95686274510000002" green="0.95686274510000002" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="nrd-oR-Vuq" firstAttribute="centerX" secondItem="xSo-po-Qw9" secondAttribute="centerX" id="35J-MV-518"/>
+                                    <constraint firstItem="4Os-Sa-ddg" firstAttribute="top" secondItem="nrd-oR-Vuq" secondAttribute="bottom" constant="20" id="7aT-xo-cMd"/>
+                                    <constraint firstItem="nrd-oR-Vuq" firstAttribute="width" secondItem="xSo-po-Qw9" secondAttribute="width" multiplier="0.3" id="aMD-wU-O5p"/>
+                                    <constraint firstItem="4Os-Sa-ddg" firstAttribute="centerX" secondItem="xSo-po-Qw9" secondAttribute="centerX" id="rll-Sp-agO"/>
+                                    <constraint firstItem="nrd-oR-Vuq" firstAttribute="top" secondItem="xSo-po-Qw9" secondAttribute="top" constant="50" id="vXX-Aa-AYw"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="eqt-Bs-fig" secondAttribute="trailing" id="2eh-Eb-4Zm"/>
                             <constraint firstItem="eqt-Bs-fig" firstAttribute="top" secondItem="lvZ-rq-gOt" secondAttribute="bottom" id="8CT-KJ-0aG"/>
+                            <constraint firstAttribute="bottom" secondItem="xSo-po-Qw9" secondAttribute="bottom" id="9aT-MN-66f"/>
+                            <constraint firstAttribute="trailing" secondItem="xSo-po-Qw9" secondAttribute="trailing" id="OxO-Co-EYf"/>
                             <constraint firstItem="ui0-Va-oLr" firstAttribute="top" secondItem="eqt-Bs-fig" secondAttribute="bottom" id="bgO-j8-TCH"/>
+                            <constraint firstItem="xSo-po-Qw9" firstAttribute="leading" secondItem="itS-sP-rzm" secondAttribute="leading" id="hIl-iR-y0V"/>
+                            <constraint firstItem="xSo-po-Qw9" firstAttribute="top" secondItem="lvZ-rq-gOt" secondAttribute="bottom" id="xep-cv-OgA"/>
                             <constraint firstItem="eqt-Bs-fig" firstAttribute="leading" secondItem="itS-sP-rzm" secondAttribute="leading" id="xer-9L-VtY"/>
                         </constraints>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="catagoryListTable" destination="eqt-Bs-fig" id="b0r-o6-oRv"/>
+                        <outlet property="noSearchResultView" destination="xSo-po-Qw9" id="dW2-rc-Fpb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="U1h-3V-vOp" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -487,7 +517,7 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="thY-pR-lfM">
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="thY-pR-lfM">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nosearch" translatesAutoresizingMaskIntoConstraints="NO" id="tWZ-OK-2IB">
@@ -527,6 +557,7 @@
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
+                        <outlet property="noSearchResultView" destination="thY-pR-lfM" id="ipN-6g-4TC"/>
                         <outlet property="searchResultTable" destination="C8b-1c-6Xe" id="v5a-tg-bFk"/>
                     </connections>
                 </viewController>
