--- a/OrangeFun/搜索/HistoryTableCell.xib
+++ b/OrangeFun/搜索/HistoryTableCell.xib
@@ -1,21 +1,80 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="PingFang.ttc">
+            <string>PingFangHK-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="HistoryTableCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="37" id="KGk-i7-Jjw" customClass="HistoryTableCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="37"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="36.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="history" translatesAutoresizingMaskIntoConstraints="NO" id="8Vy-5p-6hP">
+                        <rect key="frame" x="8" y="11" width="15" height="15"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="15" id="5hw-sq-zOe"/>
+                            <constraint firstAttribute="width" constant="15" id="kaI-Jv-1XS"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="历史记录" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3jq-dP-Qxo">
+                        <rect key="frame" x="31" y="8" width="60" height="21"/>
+                        <fontDescription key="fontDescription" name="PingFangHK-Regular" family="PingFang HK" pointSize="15"/>
+                        <color key="textColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OAD-Lu-oCq">
+                        <rect key="frame" x="0.0" y="35.5" width="320" height="1"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="o4S-hO-FGA"/>
+                        </constraints>
+                    </view>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z6D-TA-wqv">
+                        <rect key="frame" x="252" y="0.0" width="60" height="35.5"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="60" id="vH4-Fn-8fp"/>
+                        </constraints>
+                        <state key="normal" image="close"/>
+                    </button>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="8Vy-5p-6hP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="9nh-dK-pJa"/>
+                    <constraint firstItem="OAD-Lu-oCq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="E20-Fx-9u5"/>
+                    <constraint firstItem="3jq-dP-Qxo" firstAttribute="leading" secondItem="8Vy-5p-6hP" secondAttribute="trailing" constant="8" id="GOi-vU-HQ5"/>
+                    <constraint firstItem="Z6D-TA-wqv" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="HkI-NY-WK3"/>
+                    <constraint firstItem="3jq-dP-Qxo" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="PUY-0y-7lI"/>
+                    <constraint firstItem="OAD-Lu-oCq" firstAttribute="top" secondItem="Z6D-TA-wqv" secondAttribute="bottom" id="a26-6T-v8P"/>
+                    <constraint firstAttribute="trailing" secondItem="Z6D-TA-wqv" secondAttribute="trailing" constant="8" id="bFs-Iu-SV8"/>
+                    <constraint firstAttribute="trailing" secondItem="OAD-Lu-oCq" secondAttribute="trailing" id="c0I-Hs-tzb"/>
+                    <constraint firstAttribute="bottom" secondItem="OAD-Lu-oCq" secondAttribute="bottom" id="eKM-kx-fZ9"/>
+                    <constraint firstItem="8Vy-5p-6hP" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="x7X-kK-Oa9"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
+            <connections>
+                <outlet property="deleteItemBtn" destination="Z6D-TA-wqv" id="cKe-Ue-Rbl"/>
+                <outlet property="searchKeywordLabel" destination="3jq-dP-Qxo" id="0YB-f2-9py"/>
+            </connections>
+            <point key="canvasLocation" x="34" y="123.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="close" width="10" height="10"/>
+        <image name="history" width="15" height="15"/>
+    </resources>
 </document>
